--- a/assets/W3PRO412.css
+++ b/assets/W3PRO412.css
@@ -1,3 +1,8 @@
+---
+
+---
+
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro');
 ﻿/* W3PRO.CSS 4.12 November 2018 by Jan Egil and Borge Refsnes */
 html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}
 /* Extract from normalize.css by Nicolas Gallagher and Jonathan Neal git.io/normalize */
@@ -25,11 +30,18 @@ legend{color:inherit;display:table;max-width:100%;padding:0;white-space:normal}t
 ::-webkit-input-placeholder{color:inherit;opacity:0.54}
 ::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}
 /* End extract */
-html,body{font-family:Verdana,sans-serif;font-size:15px;line-height:1.5}html{overflow-x:hidden}
-h1{font-size:36px}h2{font-size:30px}h3{font-size:24px}h4{font-size:20px}h5{font-size:18px}h6{font-size:16px}.w3-serif{font-family:serif}
-h1,h2,h3,h4,h5,h6{font-family:"Segoe UI",Arial,sans-serif;font-weight:400;margin:10px 0}.w3-wide{letter-spacing:4px}
-hr{border:0;border-top:1px solid #eee;margin:20px 0}
-.w3-image{max-width:100%;height:auto}img{vertical-align:middle}a{color:inherit}
+html {font-family: sans-serif;line-height: 1.15;-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; -ms-overflow-style: scrollbar; -webkit-tap-highlight-color : transparent;}
+body {font-family:'Source Sans Pro',sans-serif; font-size: 1rem;font-weight: 400;line-height: 1.5; color: #212529; text-align: left; background-color: #fff;}html{overflow-x:hidden}
+    .w3-wrapper {position: relative;overflow: hidden;width: 100%; }
+h1,h2,h3,h4,h5,h6,.w3-slim,{font-family:'Source Sans Pro',sans-serif;font-weight:400;margin:.5rems 0}.w3-wide{font-family:'Source Sans Pro',sans-serif;font-weight:400;letter-spacing:4px}
+
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 { margin-bottom: 0.5rem;font-family: inherit;font-weight: 500;line-height: 1.2; color: inherit;}
+h1, .h1 {font-size: 2.25rem;} h2, .h2 {font-size: 2rem;} h3, .h3 {font-size: 1.75rem;} h4, .h4 {font-size: 1.5rem;} h5, .h5 {font-size: 1.25rem;}h6, .h6 {font-size: 1rem;}
+.lead { font-size: 1.25rem;font-weight: 300;} small,.small {font-size: 80%; font-weight: 400;}.w3-serif{font-family:serif}
+hr { margin-top: 1rem; margin-bottom: 1rem; border: 0; border-top:1px solid rgba(0, 0, 0, 0.1);}
+.w3-image { max-width:100%;height:auto} img { margin-bottom:-5px} a{color:inherit}
+.w3-maxw { max-width:100%;} .w3-maxh { max-height:100%;} .w3-w100 {width:100%;} .w3-margin-auto { margin-right:auto;margin-left:auto;}
+
 .w3-table,.w3-table-all{border-collapse:collapse;border-spacing:0;width:100%;display:table}.w3-table-all{border:1px solid #ccc}
 .w3-bordered tr,.w3-table-all tr{border-bottom:1px solid #ddd}.w3-striped tbody tr:nth-child(even){background-color:#f1f1f1}
 .w3-table-all tr:nth-child(odd){background-color:#fff}.w3-table-all tr:nth-child(even){background-color:#f1f1f1}
@@ -146,3 +158,221 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .w3-button:hover{color:#000!important;background-color:#ccc!important}
 .w3-transparent,.w3-hover-none:hover{background-color:transparent!important}
 .w3-hover-none:hover{box-shadow:none!important}
+.w3-video-container {
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-bottom: 56.25%;
+}
+
+.w3-video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.w3-video-container::after {
+    clear: both;
+}
+
+.mySlides {
+    display: none;
+}
+
+#myPage {
+    position: relative;
+}
+
+.demo {
+    cursor: pointer;
+}
+
+w3-noback {
+    background-color: transparent;
+}
+
+.w3-barblue {
+    color: #fff;
+    background-color: rgb(1, 112, 198);
+}
+
+.logo-box {
+    width: 300px;
+    border-color: #000;
+    border-style: solid;
+    padding-top: 15px;
+}
+
+.woman-bl {
+    color: #ffffff;
+    font-size: 4.250em;
+    font-weight: bold;
+    text-transform: uppercase;
+    line-height: 1;
+    text-align: center;
+    letter-spacing: -8px ;
+    text-shadow: 0px 7px 6.86px rgba(0, 0, 0, 0.15);
+    -moz-transform: matrix( 3.30206151031476,0,0,4.28571428571429,0,0);
+    -webkit-transform: matrix( 3.30206151031476,0,0,4.28571428571429,0,0);
+    -ms-transform: matrix( 3.30206151031476,0,0,4.28571428571429,0,0);
+}
+
+.woman-wh {
+    font-size: 4.250em;
+    color: rgb(0, 0, 0);
+    font-weight: bold;
+    text-transform: uppercase;
+    line-height: 1;
+    text-align: center;
+    letter-spacing: -6px ;
+    text-shadow: 0px 7px 6.86px rgba(0, 0, 0, 0.15);
+    -moz-transform: matrix( 3.30206151031476,0,0,4.28571428571429,0,0);
+    -webkit-transform: matrix( 3.30206151031476,0,0,4.28571428571429,0,0);
+    -ms-transform: matrix( 3.30206151031476,0,0,4.28571428571429,0,0);
+}
+
+.make {
+    color: rgb(153, 0, 0);
+    font-size: 4.688em;
+    font-weight: bold;
+    text-transform: uppercase;
+    line-height: 44px;
+    text-align: center;
+    letter-spacing: 5px ;
+    text-shadow: 0px 7px 6.86px rgba(0, 0, 0, 0.15);
+    -moz-transform: matrix( 1.9933992131668,0,0,1.99732433341294,0,0);
+    -webkit-transform: matrix( 1.9933992131668,0,0,1.99732433341294,0,0);
+    -ms-transform: matrix( 1.9933992131668,0,0,1.99732433341294,0,0);
+    margin: 0;
+    padding: 0;
+}
+
+.some {
+    color: rgb(204, 0, 0);
+    font-size: 4.688em;
+    font-weight: bold;
+    text-transform: uppercase;
+    line-height: 44px;
+    text-align: center;
+    letter-spacing: 4px ;
+    text-shadow: 0px 7px 6.86px rgba(0, 0, 0, 0.15);
+    -moz-transform: matrix( 1.9933992131668,0,0,1.99732433341294,0,0);
+    -webkit-transform: matrix( 1.9933992131668,0,0,1.99732433341294,0,0);
+    -ms-transform: matrix( 1.9933992131668,0,0,1.99732433341294,0,0);
+}
+
+.noise {
+    color: rgb(255, 0, 0);
+    font-size: 4.688em;
+    font-weight: bold;
+    text-transform: uppercase;
+    line-height: 44px;
+    text-align: center;
+    letter-spacing: -1px ;
+    text-shadow: 0px 7px 6.86px rgba(0, 0, 0, 0.15);
+    -moz-transform: matrix( 1.9933992131668,0,0,1.99732433341294,0,0);
+    -webkit-transform: matrix( 1.9933992131668,0,0,1.99732433341294,0,0);
+    -ms-transform: matrix( 1.9933992131668,0,0,1.99732433341294,0,0);
+}
+
+
+
+.slogan {
+    font-size: 1em;
+    letter-spacing: 1.3px ;
+    color: rgb(0, 0, 0);
+    font-weight: bold;
+    text-transform: uppercase;
+    line-height: 1.2;
+    text-align: center;
+    -moz-transform: matrix( 3.63726099993542,0,0,3.66500956203956,0,0);
+    -webkit-transform: matrix( 3.63726099993542,0,0,3.66500956203956,0,0);
+    -ms-transform: matrix( 3.63726099993542,0,0,3.66500956203956,0,0);
+}
+
+.slogan-bl {
+    font-size: 16px;
+    letter-spacing: 1.3px ;
+    color: #fff;
+    font-weight: bold;
+    text-transform: uppercase;
+    line-height: 1.2;
+    text-align: center;
+    -moz-transform: matrix( 3.63726099993542,0,0,3.66500956203956,0,0);
+    -webkit-transform: matrix( 3.63726099993542,0,0,3.66500956203956,0,0);
+    -ms-transform: matrix( 3.63726099993542,0,0,3.66500956203956,0,0);
+}
+
+.woman-in {
+    color: rgb(0, 0, 0);
+    font-weight: bold;
+    text-transform: uppercase;
+    -moz-transform: matrix( 1.9933992131668,0,0,1.99732433341294,0,0);
+    -webkit-transform: matrix( 1.9933992131668,0,0,1.99732433341294,0,0);
+    -ms-transform: matrix( 1.9933992131668,0,0,1.99732433341294,0,0);
+    letter-spacing: 0px;
+}
+
+.woman-in-bl {
+    color: #fff;
+    font-weight: bold;
+    text-transform: uppercase;
+    -moz-transform: matrix( 1.9933992131668,0,0,1.99732433341294,0,0);
+    -webkit-transform: matrix( 1.9933992131668,0,0,1.99732433341294,0,0);
+    -ms-transform: matrix( 1.9933992131668,0,0,1.99732433341294,0,0);
+}
+
+.make-in {
+    color: rgb(153, 0, 0);
+    font-weight: bold;
+    text-transform: uppercase;
+    -moz-transform: matrix( 1.9933992131668,0,0,1.99732433341294,0,0);
+    -webkit-transform: matrix( 1.9933992131668,0,0,1.99732433341294,0,0);
+    -ms-transform: matrix( 1.9933992131668,0,0,1.99732433341294,0,0);
+    letter-spacing: 2px;
+}
+
+.some-in {
+    color: rgb(204, 0, 0);
+    font-weight: bold;
+    text-transform: uppercase;
+    -moz-transform: matrix( 1.9933992131668,0,0,1.99732433341294,0,0);
+    -webkit-transform: matrix( 1.9933992131668,0,0,1.99732433341294,0,0);
+    -ms-transform: matrix( 1.9933992131668,0,0,1.99732433341294,0,0);
+    letter-spacing: 1px;
+}
+
+.noise-in {
+    color: rgb(255, 0, 0);
+    font-weight: bold;
+    text-transform: uppercase;
+    -moz-transform: matrix( 1.9933992131668,0,0,1.99732433341294,0,0);
+    -webkit-transform: matrix( 1.9933992131668,0,0,1.99732433341294,0,0);
+    -ms-transform: matrix( 1.9933992131668,0,0,1.99732433341294,0,0);
+    letter-spacing: 0px;
+}
+
+.w3-theme-l5 {color:#000; background-color:#f2f9fe }
+.w3-theme-l4 {color:#000; background-color:#d2eafd }
+.w3-theme-l3 {color:#000; background-color:#a6d4fa }
+.w3-theme-l2 {color:#000; background-color:#79bff8 }
+.w3-theme-l1 {color:#fff; background-color:#4daaf6 }
+.w3-theme-d1 {color:#fff; background-color:#0c87eb }
+.w3-theme-d2 {color:#fff; background-color:#0b78d1 }
+.w3-theme-d3 {color:#fff; background-color:#0a69b7 }
+.w3-theme-d4 {color:#fff; background-color:#085a9d }
+.w3-theme-d5 {color:#fff; background-color:#074b83 }
+
+.w3-theme-light {color:#000; background-color:#f2f9fe }
+.w3-theme-dark {color:#fff; background-color:#074b83 }
+.w3-theme-action {color:#fff; background-color:#074b83 }
+
+.w3-theme {color:#fff; background-color:#2196f3 }
+.w3-text-theme {color:#2196f3 }
+.w3-border-theme {border-color:#2196f3 }
+
+.w3-hover-theme:hover {color:#fff; background-color:#2196f3 }
+.w3-hover-text-theme:hover {color:#2196f3 }
+.w3-hover-border-theme:hover {border-color:#2196f3 }
